--- a/package.json
+++ b/package.json
@@ -1,52 +1,18 @@
 {
-  "name": "insight-lite-api",
-  "description": "A Litecoin blockchain REST and web socket API service for Litecore Node.",
-  "version": "0.4.4",
-  "repository": "git://github.com/litecoin-project/insight-lite-api.git",
-  "contributors": [
-    {
-      "name": "Gustavo Cortez",
-      "email": "cmgustavo83@gmail.com"
-    },
-    {
-      "name": "Ivan Socolsky",
-      "email": "jungans@gmail.com"
-    },
-    {
-      "name": "Juan Ignacio Sosa Lopez",
-      "email": "bechilandia@gmail.com"
-    },
-    {
-      "name": "Manuel Araoz",
-      "email": "manuelaraoz@gmail.com"
-    },
-    {
-      "name": "Matias Alejo Garcia",
-      "email": "ematiu@gmail.com"
-    },
-    {
-      "name": "Mario Colque",
-      "email": "colquemario@gmail.com"
-    },
-    {
-      "name": "Patrick Nagurny",
-      "email": "patrick@bitpay.com"
-    },
-    {
-      "name": "Braydon Fuller",
-      "email": "braydon@bitpay.com"
-    }
-  ],
+  "name": "insight-gmcn-api",
+  "description": "A GambleCoin blockchain REST and web socket API service for GambleCore Node.",
+  "version": "0.4.14",
+  "repository": "git://github.com/GambleCoin-Project/insight-gmcn-api.git",
   "bugs": {
-    "url": "https://github.com/litecoin-project/insight-lite-api/issues"
+    "url": "https://github.com/GambleCoin-Project/insight-gmcn-api/issues"
   },
-  "homepage": "https://github.com/litecoin-project/insight-lite-api",
+  "homepage": "https://github.com/GambleCoin-Project/insight-gmcn-api",
   "license": "MIT",
   "keywords": [
     "insight",
     "insight api",
     "blockchain",
-    "litecoin api",
+    "gamblecoin api",
     "blockchain api",
     "json",
     "litecore"
@@ -61,8 +27,8 @@
   "bitcoreNode": "lib",
   "dependencies": {
     "async": "*",
-    "litecore-lib": "^0.13.22",
-    "litecore-message": "^1.0.5",
+    "gamblecore-lib": "git://github.com/GambleCoin-Project/gamblecore-lib.git",
+    "gamblecore-message": "git://github.com/GambleCoin-Project/gamblecore-message.git",
     "body-parser": "^1.13.3",
     "compression": "^1.6.1",
     "lodash": "^2.4.1",
